--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "check-types": "turbo run check-types",
     "db:generate":"cd packages/db && npx prisma generate && cd ../..",
     "start:web":"cd apps/web && bun run start",
-    "start:backend":"cd apps/http-backend && bun run start",
-    "start:websocket":"cd apps/websocket && bun run start"
+    "start:backend":"cd apps/http-backend && bun run index.ts",
+    "start:websocket":"cd apps/websocket && bun run indx.ts"
   },
   "devDependencies": {
     "prettier": "^3.5.3",
